@@ -1,4 +1,9 @@
 ----------------------------------------------------------------------
+Feb 3, 2015 - Clojure 1.3 - 1.6, sheet v21
+
+Added (my-map k) -> (get my-map k) shorthand to Maps/Examine.
+
+----------------------------------------------------------------------
 Dec 19, 2014 - Clojure 1.3 - 1.6, sheet v20
 
 Grimoire 0.4.0 fixes and updates, thanks to Reid McKenzie and Alex
